[package]
authors = ["Mrisho Lukamba & Evolution"]
description = ""
edition = "2021"
homepage = ""
license = "Unlicense"
name = "vane-para-runtime"
repository = ""
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { workspace = true, optional = true }
log = { workspace = true }
scale-info = { workspace = true }
smallvec = "1.10.0"

# Local
#vane-register = { version = "1.0.0-dev", default-features = false, path = "../../pallets/vane-register" }
#vane-order = { version = "1.0.0-dev", default-features =  false, path = "../../pallets/vane-order" }
#vane-payment = { version = "1.0.0-dev", default-features = false, path = "../../pallets/vane-payment"}
#vane-xcm = {version = "1.0.0-dev", default-features = false,  path ="../../pallets/vane-xcm"}
vane-primitive = { version = "1.0.0-dev", default-features = false, path ="../../primitive/vane-primitive"}



# polkadot sdk
frame-benchmarking = {   workspace = true, optional = true }
frame-executive = {   workspace = true }
frame-support = {   workspace = true }
frame-system = {   workspace = true }
frame-system-benchmarking = {   workspace = true, optional = true }
frame-system-rpc-runtime-api = {   workspace = true }
frame-try-runtime = {   workspace = true, optional = true }
pallet-aura = {   workspace = true }
pallet-authorship = {   workspace = true }
pallet-assets = {   workspace = true }
pallet-balances = {   workspace = true }
pallet-session = {   workspace = true }
pallet-sudo = {   workspace = true }
pallet-timestamp = {   workspace = true }
pallet-transaction-payment = {   workspace = true }
pallet-transaction-payment-rpc-runtime-api = {   workspace = true }
pallet-utility = {   workspace = true }
sp-api = {   workspace = true }
sp-block-builder = {   workspace = true }
sp-consensus-aura = {   workspace = true }
sp-core = {   workspace = true }
sp-inherents = {   workspace = true }
sp-offchain = {   workspace = true }
sp-runtime = {   workspace = true }
sp-session = {   workspace = true }
sp-std = {   workspace = true }
sp-transaction-pool = {   workspace = true }
sp-version = {   workspace = true }

# Polkadot
pallet-xcm = {   workspace = true }
polkadot-parachain-primitives = {   workspace = true }
polkadot-runtime-common = {   workspace = true }
staging-xcm = {   workspace = true }
staging-xcm-builder = {   workspace = true }
staging-xcm-executor = {   workspace = true }

# Cumulus
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-session-benchmarking = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
pallet-collator-selection = { workspace = true }
parachain-info = { workspace = true }
parachains-common = { workspace = true }
assets-common = {   workspace = true }

[dev-dependencies]

xcm-simulator = { workspace = true }
xcm-emulator = { workspace = true }
polkadot-core-primitives = { workspace = true }
sp-io = { workspace = true }
pallet-message-queue = { workspace = true }
staging-xcm-builder = { workspace = true }
pallet-xcm = { workspace = true }
polkadot-parachain-primitives = { workspace = true }

# Runtimes
polkadot-runtime = { workspace = true }
asset-hub-polkadot-runtime = { workspace = true }
polkadot-runtime-common = { workspace = true }
rococo-runtime = { workspace = true }
rococo-runtime-constants = { workspace = true }
polkadot-runtime-parachains = { workspace = true }

# --**-----
staging-xcm = { workspace = true }
staging-xcm-executor = { workspace = true }
tracing = { version = "0.1.37" }
sp-tracing = { version = "11.0.0"}
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }
integration-tests-common = { workspace = true }

array-bytes = "6.1.0"
hex = "0.4.3"
hex-literal = { workspace = true }


[features]
default = [
	"std",
]
std = [
	"hex-literal",
	"codec/std",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-assets/std",
	"assets-common/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	# Vane pallets
#	"vane-register/std",
#	"vane-order/std",
#	"vane-payment/std",
#	"vane-xcm/std",
	"vane-primitive/std",




	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
#	"sp-io/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"staging-xcm-builder/std",
	"staging-xcm-executor/std",
	"staging-xcm/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"staging-xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
]
